[gd_scene load_steps=14 format=2]

[ext_resource path="res://Field.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/DialogLayer.gd" type="Script" id=2]
[ext_resource path="res://common/SceneController.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Hud/HUDLayer.gd" type="Script" id=5]
[ext_resource path="res://textures/tools/bone_femur.png" type="Texture" id=6]
[ext_resource path="res://textures/tools/envelope.png" type="Texture" id=7]
[ext_resource path="res://Hud/InventoryContainer.gd" type="Script" id=8]
[ext_resource path="res://resources/inventory.tres" type="Theme" id=9]

[sub_resource type="InputEventAction" id=1]
action = "toggle_menu"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "sleep"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0.0392157, 0, 0.12549, 1 ), Color( 0, 0, 0.12549, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "sleep"
} ]
}

[node name="SceneController" type="Node2D"]
script = ExtResource( 3 )

[node name="DialogLayer" type="CanvasLayer" parent="."]
layer = 100
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="DialogLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -136.0

[node name="Label" type="Label" parent="DialogLayer/Panel"]
margin_right = 50.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0.866667, 0.984314, 1 )
text = "Header:"

[node name="Text" type="RichTextLabel" parent="DialogLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 23.0

[node name="Field" parent="." instance=ExtResource( 1 )]

[node name="Debug" type="Sprite" parent="."]
position = Vector2( 843, -338 )
texture = ExtResource( 4 )

[node name="HUDLayer" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="Help" type="Panel" parent="HUDLayer"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -508.0
margin_top = -508.0
margin_right = -169.0
margin_bottom = -338.0

[node name="Label2" type="Label" parent="HUDLayer/Help"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.827451, 0, 1 )
text = "HELP"

[node name="Label" type="Label" parent="HUDLayer/Help"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "
Controls:
WASD : Move around and select items
SPACE:  Talk, interact and use items
TAB : Open and close inventory
ENTER : Attack
You can \"attack\" things to see if they are interactable (white flash) or enemies (red flash)
H: Warp to bike
ESCAPE: Open and close this dialog"
autowrap = true

[node name="Food" type="ProgressBar" parent="HUDLayer"]
margin_left = 4.0
margin_top = 17.0
margin_right = 222.0
margin_bottom = 31.0
value = 60.0

[node name="Label" type="Label" parent="HUDLayer/Food"]
margin_left = 3.0
margin_top = -14.0
margin_right = 43.0
text = "Food"

[node name="Timer" type="Timer" parent="HUDLayer/Food"]
wait_time = 3.0
autostart = true

[node name="ColorRect" type="ColorRect" parent="HUDLayer/Food"]
margin_left = 42.0
margin_right = 43.0
margin_bottom = 18.0
color = Color( 0.6, 0.6, 0.6, 1 )

[node name="ColorRect2" type="ColorRect" parent="HUDLayer/Food"]
margin_left = 128.0
margin_right = 129.0
margin_bottom = 18.0
color = Color( 0.6, 0.6, 0.6, 1 )

[node name="ToolSprite" type="Sprite" parent="HUDLayer"]
position = Vector2( 26, 52 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="InventoryButton" type="Button" parent="HUDLayer"]
margin_left = 830.0
margin_top = 35.0
margin_right = 921.0
margin_bottom = 57.0
toggle_mode = true
shortcut = SubResource( 2 )
text = "Inventory"
icon = ExtResource( 7 )

[node name="InventoryContainer" type="VBoxContainer" parent="HUDLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -193.0
margin_top = 60.0
margin_right = -102.0
margin_bottom = 100.0
theme = ExtResource( 9 )
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="HUDLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUDLayer/ColorRect"]
root_node = NodePath("../..")
anims/RESET = SubResource( 3 )
anims/sleep = SubResource( 4 )

[node name="CraftLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="CraftLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = 4.0
margin_right = 232.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="CraftLayer/Panel"]
margin_right = 40.0
margin_bottom = 14.0
text = "Craft:
PIE - 3 Red Berries
MINI DRIVE - 10 Plastberries

\"Space\" to use item in inventory, \"tab\" to close"

[connection signal="famished" from="HUDLayer" to="." method="_on_HUDLayer_famished"]
[connection signal="hungry" from="HUDLayer" to="." method="_on_HUDLayer_hungry"]
[connection signal="timeout" from="HUDLayer/Food/Timer" to="HUDLayer" method="_on_Food_Timer_timeout"]
[connection signal="toggled" from="HUDLayer/InventoryButton" to="." method="_on_InventoryButton_toggled"]
[connection signal="craft" from="HUDLayer/InventoryContainer" to="." method="_on_InventoryContainer_craft"]
[connection signal="use" from="HUDLayer/InventoryContainer" to="." method="_on_InventoryContainer_use"]
